baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__PromptsWithChatMessages_render_prompt@PromptsWithChatMessages.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/PromptsWithChatMessages.baml
---
fixture = 'PromptsWithChatMessages.baml'
function = 'FnPromptsWithChatMessages'

[prompt]
type = 'Chat'

[[prompt.messages]]
role = 'system'

[[prompt.messages.content]]
type = 'Text'
text = 'You are an assistant that always responds in a very excited way with emojis and also outputs this word 4 times after giving a response:'

[[prompt.messages]]
role = 'user'

[[prompt.messages.content]]
type = 'Text'
text = 'Tell me a haiku about'
