baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__V2Basic_render_prompt@V2Basic.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/V2Basic.baml
---
fixture: V2Basic.baml
function: FnV2Basic
prompt:
  type: Chat
  messages:
    - role: system
      content:
        - type: Text
          text: "Extract the following information from the resume:\n\nResume:\n<<<<\n\n<<<<\n\nOutput JSON schema:\nAnswer in JSON using this schema:\n{\n  name: string,\n  email: string,\n  phone: string,\n  experience: string[],\n  education: {\n    institution: string,\n    location: string,\n    degree: string,\n    major: string[],\n    graduation_date: string or null,\n  }[],\n  skills: string[],\n}\n\nJSON:"
