baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__no_args_chat_render_prompt@no_args_chat.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&snapshot"
input_file: crates/baml_build_request_tests/testdata/no_args_chat.baml
---
fixture: no_args_chat.baml
function: SimpleChat
prompt:
  type: Chat
  messages:
    - role: system
      content:
        - type: Text
          text: You are a helpful assistant.
    - role: user
      content:
        - type: Text
          text: What is the capital of France?
