baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__no_args_completion_render_prompt@no_args_completion.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&snapshot"
input_file: crates/baml_build_request_tests/testdata/no_args_completion.baml
---
fixture: no_args_completion.baml
function: SimpleGreeting
prompt:
  type: Completion
  text: Say hello to the world.
